@@ -25,7 +25,8 @@
 
 /* $Id$ */
 
-/** \page twi_demo Example using the two-wire interface (TWI)
+/** \defgroup twi_demo Example using the two-wire interface (TWI)
+    \ingroup demos
 
 Some newer devices of the ATmega series contain builtin support for
 interfacing the microcontroller to a two-wire bus, called TWI.  This
